# SDL

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
examples/: mandelbrot.sac  minimal.sac
src/: CMakeLists.txt  SDL2.sac  SDLdisplay.sac  example.sac
src/src/: sdl3.c  sdl3.h
src/src/SDL/: SDLsac.h  destroyDisplay.c  drawArray.c  drawArrayOffset.c  drawPixel.c  getExtent.c  getSelection.c  initDisplay.c
src/src/SDL2/: SDL2data.h  SDL2proto.h  SDL2sac.h  close.c  color.c  data.c  display.c  draw.c  event.c  extent.c  font.c  fontdata.h  fontstruct.h  init.c  invert.c  line.c  mouse.c  names.c  pixel.c  rect.c  resize.c  select.c  sem.c  setup.c  title.c  update.c  window.c
